configuration: prepare configuration when changing runtimes

When changing the runtime, we might need to alter the installation prefix.

https://bugzilla.gnome.org/show_bug.cgi?id=780775